# python-api

./: .dockerignore  Dockerfile  LICENSE  README.md  gunicorn_conf.py  pyproject.toml  requirements.txt  test_scaffold.py
app/: main.py
app/application/health/dtos/: health_status_dto.py
app/application/health/mappers/: health_status_mapper.py
app/application/health/use_cases/: check_health.py
app/core/config/: logging.py  settings.py
app/core/di/: container.py
app/core/middleware/: correlation.py  security_headers.py
app/core/security/: api_key.py
app/domain/health/entities/: base_entity.py  health_status.py
app/domain/health/ports/: health_check_port.py
app/infrastructure/health/adapters/: health_check_adapter.py
app/presentation/shared/: errors.py  http_request.py  http_response.py
app/presentation/v1/: api.py
app/presentation/v1/endpoints/health/: controller.py  endpoints.py
app/presentation/v1/schemas/: health_response.py
tests/: conftest.py  test_api_health_async.py  test_api_key_dependency.py  test_security_headers.py
tools/: cli.py
