[tool.poetry]
name = "clean-arch-hex-fastapi-di-v1"
version = "0.1.0"
description = "Produção: Clean Arch + DDD + Hexagonal com FastAPI, DI, segurança (sem observabilidade/DB)."
authors = ["Você <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
typer = "^0.12.0"
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
dependency-injector = "^4.43.0"
gunicorn = "^22.0.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
httpx = "^0.27.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cocli = "tools.cli:app"
